--- a/MvvmTestDemo/MvvmTestDemo.csproj
+++ b/MvvmTestDemo/MvvmTestDemo.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
 	<OutputType>WinExe</OutputType>
-	<OutputPath />
-	<IntermediateOutputPath />
+	<!--<OutputPath />-->
+	<!--<BaseIntermediateOutputPath />-->
+	<!--<IntermediateOutputPath />-->
 	<TargetFrameworks>net461;net5.0-windows</TargetFrameworks>
 	<UseWPF>true</UseWPF>
 	<UseWindowsForms>true</UseWindowsForms>
