--- a/.github/workflows/nuget-push.yml
+++ b/.github/workflows/nuget-push.yml
@@ -2,11 +2,11 @@ name: Nuget Publish
  
 on:
   push:
-    tags:
-    - '*'
-  #   branches: [ chance_dev ]
-  # pull_request:
-  #   branches: [ chance_dev ]
+    # tags:
+    # - '*'
+    branches: [ chance_dev ]
+  pull_request:
+    branches: [ chance_dev ]
  
 jobs:
   build: 
@@ -19,7 +19,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.x'
+        dotnet-version: '6.0.x'
         
     - name: Install dependencies
       run: dotnet restore
