--- a/.github/workflows/nuget-push.yml
+++ b/.github/workflows/nuget-push.yml
@@ -2,11 +2,11 @@ name: Nuget Publish
  
 on:
   push:
-    # tags:
-    # - '*'
-    branches: [ chance_dev ]
-  pull_request:
-    branches: [ chance_dev ]
+    tags:
+    - '*'
+    # branches: [ chance_dev ]
+  # pull_request:
+    # branches: [ chance_dev ]
  
 jobs:
   build: 
