--- a/CookPopularCSharpToolkit/CookPopularCSharpToolkit.csproj
+++ b/CookPopularCSharpToolkit/CookPopularCSharpToolkit.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
 	<PackageReference Include="log4net" Version="2.0.14" />
 	<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	<PackageReference Include="System.ComponentModel.Composition" Version="6.0.0-preview.1.21102.12" />
 	<PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
 	<PackageReference Include="System.ValueTuple" Version="4.5.0" />
